# Tapormi

./: .gitignore  README.md
docs/: implementation-plan.md  macos-app-bootstrap.md  realtime-protocol.md
tapormi-macos/: README.md
worker/: README.md  pyproject.toml
worker/scripts/: ws_smoke_client.py
worker/src/tapormi_worker/: engine.py  main.py
